@@ -310,6 +310,7 @@ define function, begin
 301,findmenuid,1,0            #find menu(menu ID) search open menus for menu ID and return menu handle
 302,menuisopen,1,0            #menu is open(menu handle) # return true as long as the handle is still valid
 303,menuitemslot,1,0          #menu item slot(menu item handle) returns a menu slot number
+304,outsidebattlecure,3,0,0,-1 #out of battle cure(attack ID, target, attacker)
 #2xx,getnpcraw,2,0,0          #raw npc data(who,which)
 #2xx,setnpcraw,3,0,0,0        #raw npc data(who,which,val)
 end
